added development capabilities

--- a/joon/index.html
+++ b/joon/index.html
@@ -11,49 +11,78 @@
     <h3>Hi, I'm</h3>
     <h1>- Joon Lee -</h1>
   </div>
- 	<section class="jumbotron">
+  <section class="jumbotron">
 	  <div class="career container">
 		<div class="row text-left">
-		  	<h1>My Career</h1>
-		  	<img class="worklogo col-sm-4" src="./picture/HTC2.png" />
-		  	<div class="col-sm-7 text-left">
-			  	<h2>HTC America</h2>
-			  	<h4 class="duration">May 2011 - Feb 2018</h4>
-			  	<h5 class="title">Principal Software Quality Assurance Engineer</h5>
-			  	<h5 class="title">Senior Software Quality Assurance Engineer</h5>
-			  	<h5 class="title">Project Manager</h5>
-			  	<h5 class="title">Software Quality Assurance Engineer</h5>
-			  	<h3 class="location">Bedminster, NJ</h3>
-			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-			</div>	  
-			<div class="col-sm-1"></div>
-			<img class="worklogo col-sm-4" src="./picture/LG2.png" />
-			<div class="col-sm-6 text-left">
-			  	<h2>LG Electronics MobileComm</h2>
-			  	<h4 class="duration">Jan 2008 - May 2011</h4>
-			  	<h5 class="title">Software Verification Engineer</h5> 	
-			  	<h3 class="location">Morristown, NJ</h3>
-		  		<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-		  	</div>
-		  	<div class="col-sm-2"></div>
-		  	<img class="logo col-sm-4" src="./picture/NJIT2.png" />
-		  	<div class="description col-sm-7">
-		  		<h2>New Jersey Institue of Technology</h2>
-		  		<h3>B.S. in Industrial Engineering</h3>
-		  		<h4 class="duration">Graduated May, 2007</h4>
-		  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-		  	</div>
-		  	<div class="col-sm-1"></div>
+		  	<h1 id="heading">Where I've Been</h1>
+			  	<img class="worklogo col-sm-4" src="./picture/HTC2.png" />
+			  	<div class="col-sm-7 text-left">
+				  	<h2>HTC America</h2>
+				  	<h4 class="duration">May 2011 - Feb 2018</h4>
+				  	<h5 class="title">Principal Software Quality Assurance Engineer</h5>
+				  	<h5 class="title">Senior Software Quality Assurance Engineer</h5>
+				  	<h5 class="title">Project Manager</h5>
+				  	<h5 class="title">Software Quality Assurance Engineer</h5>
+				  	<h3 class="location">Bedminster, NJ</h3>
+				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+				</div>	  
+				<div class="col-sm-1"></div>
+
+				<img class="worklogo col-sm-4" src="./picture/LG2.png" />
+				<div class="col-sm-7 text-left">
+				  	<h2>LG Electronics MobileComm</h2>
+				  	<h4 class="duration">Jan 2008 - May 2011</h4>
+				  	<h5 class="title">Software Verification Engineer</h5> 	
+				  	<h3 class="location">Morristown, NJ</h3>
+			  		<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	</div>
+		  		<div class="col-sm-1"></div>
+
+			  	<img class="logo col-sm-4" src="./picture/NJIT.png" />
+			  	<div class="description col-sm-7">
+			  		<h2>New Jersey Institue of Technology</h2>
+			  		<h3>B.S. in Industrial Engineering</h3>
+			  		<h4 class="duration">Graduated May, 2007</h4>
+			  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	</div>
+		  		<div class="col-sm-1"></div>
 	  	</div>
 	  </div>
-   	</section>
-  </div>
+  </section>
   <div class="skills">
-  	<h1>Development Capabilities</h1>
+  	<h1 id="heading">What I Can Do</h1>
+  	<div class="development">
+  		<img src="./picture/python128.png" alt="python" class="dicon"/>
+  		<img src="./picture/js128.png" alt="javascript" class="dicon"/>
+  		<img src="./picture/html128.png" alt="html" class="dicon"/>
+  		<img src="./picture/css128.png" alt="css" class="dicon"/>
+  	</div>
   </div>
-  <div class="contact">
-  	<h1>Contact Me</h1>
-  </div>
-  
+  <section class="jumbotron">
+  	<div class="contact">
+  			<h1 id="heading">Contact Me</h1>
+  				<div class="icons">
+					<a href="mailto:joonyoung82@gmail.com">
+						<img src="./picture/email64.png" alt="Email" class="iconemail"/>
+					</a>
+
+					<a href="./picture/Resume.doc" download>
+						<img src="./picture/resume64.png" alt="Resume" class="iconresume"/>
+					</a>
+
+					<a href="https://www.linkedin.com/in/joonyoung82/" target="_blank">
+						<img src="./picture/linkedin64.png" alt="LinkedIn" class="iconlinkedin"/>
+					</a>
+
+					<a href="https://github.com/joonyoung82" target="_blank">
+						<img src="./picture/github64.png" alt="GitHub" class="icongithub"/>
+					</a>
+  				</div>
+  		
+  	</div>
+  </section>
+  <footer>
+  	<p>Created by Joon Lee</p>
+  </footer>
 </body>
 </html>
