--- a/joon/index.html
+++ b/joon/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>I'm Joon Lee</title>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
@@ -25,6 +26,9 @@
 				  	<h5 class="title">Software Quality Assurance Engineer</h5>
 				  	<h3 class="location">Bedminster, NJ</h3>
 				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+				  	
 				</div>	  
 				<div class="col-sm-1"></div>
 
@@ -38,11 +42,11 @@
 			  	</div>
 		  		<div class="col-sm-1"></div>
 
-			  	<img class="logo col-sm-4" src="./picture/NJIT.png" />
+			  	<img class="worklogo col-sm-4" src="./picture/NJIT.png" />
 			  	<div class="description col-sm-7">
 			  		<h2>New Jersey Institue of Technology</h2>
-			  		<h3>B.S. in Industrial Engineering</h3>
 			  		<h4 class="duration">Graduated May, 2007</h4>
+			  		<h5 class="title">B.S. in Industrial Engineering</h5>
 			  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
 			  	</div>
 		  		<div class="col-sm-1"></div>
@@ -56,13 +60,14 @@
   		<img src="./picture/js128.png" alt="javascript" class="dicon"/>
   		<img src="./picture/html128.png" alt="html" class="dicon"/>
   		<img src="./picture/css128.png" alt="css" class="dicon"/>
+  		<img src="./picture/git128.png" alt="git" class="dicon"/>
   	</div>
   </div>
   <section class="jumbotron">
   	<div class="contact">
   			<h1 id="heading">Contact Me</h1>
   				<div class="icons">
-					<a href="mailto:joonyoung82@gmail.com">
+					<a href="mailto:joonyoung82@gmail.com?Subject=Hello%20Joon" target="_top">
 						<img src="./picture/email64.png" alt="Email" class="iconemail"/>
 					</a>
 
@@ -81,6 +86,7 @@
   		
   	</div>
   </section>
+
   <footer>
   	<p>Created by Joon Lee</p>
   </footer>
