text overlay on contact me

--- a/joon/index.html
+++ b/joon/index.html
@@ -13,43 +13,47 @@
     <h1>- Joon Lee -</h1>
   </div>
   <section class="jumbotron">
-	  <div class="career container">
+	  <h1 id="heading">Where I've Been</h1>
+	  <div class="container career">
 		<div class="row text-left">
-		  	<h1 id="heading">Where I've Been</h1>
-			  	<img class="worklogo col-sm-4" src="./picture/HTC2.png" />
-			  	<div class="col-sm-7 text-left">
-				  	<h2>HTC America</h2>
-				  	<h4 class="duration">May 2011 - Feb 2018</h4>
-				  	<h5 class="title">Principal Software Quality Assurance Engineer</h5>
-				  	<h5 class="title">Senior Software Quality Assurance Engineer</h5>
-				  	<h5 class="title">Project Manager</h5>
-				  	<h5 class="title">Software Quality Assurance Engineer</h5>
-				  	<h3 class="location">Bedminster, NJ</h3>
-				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-				  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-				  	
-				</div>	  
-				<div class="col-sm-1"></div>
-
-				<img class="worklogo col-sm-4" src="./picture/LG2.png" />
-				<div class="col-sm-7 text-left">
-				  	<h2>LG Electronics MobileComm</h2>
-				  	<h4 class="duration">Jan 2008 - May 2011</h4>
-				  	<h5 class="title">Software Verification Engineer</h5> 	
-				  	<h3 class="location">Morristown, NJ</h3>
-			  		<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-			  	</div>
-		  		<div class="col-sm-1"></div>
-
-			  	<img class="worklogo col-sm-4" src="./picture/NJIT.png" />
-			  	<div class="description col-sm-7">
-			  		<h2>New Jersey Institue of Technology</h2>
-			  		<h4 class="duration">Graduated May, 2007</h4>
-			  		<h5 class="title">B.S. in Industrial Engineering</h5>
-			  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-			  	</div>
-		  		<div class="col-sm-1"></div>
+			<div class="col-sm-1"></div>
+			<a href="http://www.htc.com/us/" target="_blank"><img class="worklogo col-sm-3" alt="HTC" src="./picture/HTC2.png" /></a>
+		 	<div class="col-sm-7 text-left">
+			  	<a href="http://www.htc.com/us/" target="_blank" class="companyname">HTC America</a>
+			  	<h4 class="duration">May 2011 - Feb 2018</h4>
+			  	<h5 class="title">Principal Software Quality Assurance Engineer</h5>
+			  	<h5 class="title">Senior Software Quality Assurance Engineer</h5>
+			  	<h5 class="title">Project Manager</h5>
+			  	<h5 class="title">Software Quality Assurance Engineer</h5>
+			  	<h3 class="location">Bedminster, NJ</h3>
+			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			</div>	  
+			<div class="col"></div>
+		</div>
+		<div class="row text-left">
+			<div class="col-sm-1"></div>
+			<a href="http://www.lg.com/us/mobile" target="_blank"><img class="worklogo col-sm-3" alt="LG Electronics" src="./picture/LG2.png" /></a>
+			<div class="col-sm-7 text-left">
+			  	<a href="http://www.lg.com/us/mobile" target="_blank" class="companyname">LG Electronics MobileComm</a>
+			  	<h4 class="duration">Jan 2008 - May 2011</h4>
+			  	<h5 class="title">Software Verification Engineer</h5> 	
+			  	<h3 class="location">Morristown, NJ</h3>
+		  		<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+		  	</div>
+	  		<div class="col"></div>
+	  	</div>
+		<div class="row text-left">
+			<div class="col-sm-1"></div>
+		  	<a href="http://www.njit.edu/" target="_blank"><img class="worklogo col-sm-3" alt="NJIT" src="./picture/NJIT.png" /></a>
+		  	<div class="description col-sm-7">
+		  		<a href="http://www.njit.edu/" target="_blank" class="companyname">New Jersey Institue of Technology</a>
+		  		<h4 class="duration">Graduated May, 2007</h4>
+		  		<h5 class="title">B.S. in Industrial Engineering</h5>
+		  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+		  	</div>
+	  		<div class="col"></div>
 	  	</div>
 	  </div>
   </section>
@@ -66,29 +70,30 @@
   <section class="jumbotron">
   	<div class="contact">
   			<h1 id="heading">Contact Me</h1>
-  				<div class="icons">
-					<a href="mailto:joonyoung82@gmail.com?Subject=Hello%20Joon" target="_top">
-						<img src="./picture/email64.png" alt="Email" class="iconemail"/>
-					</a>
 
-					<a href="./picture/Resume.doc" download>
-						<img src="./picture/resume64.png" alt="Resume" class="iconresume"/>
-					</a>
+				    <a class="img" href="mailto:joonyoung82@gmail.com?Subject=Hello%20Joon" target="_top">
+				        <div class="img__overlay_email">email</div>
+				        <img src="./picture/email58.png"/>
+				    </a>
+				    <a class="img" href="./picture/Resume.doc" download>
+				        <div class="img__overlay_resume">Resume</div>
+				        <img src="./picture/resume58.png"/>
+				    </a>
+				    <a class="img" href="https://www.linkedin.com/in/joonyoung82/" target="_blank">
+				        <div class="img__overlay_linkedin">LinkedIn</div>
+				        <img src="./picture/linkedin58.png"/>
+				    </a>
+				    <a class="img" href="https://github.com/joonyoung82" target="_blank">
+				        <div class="img__overlay_github">GitHub</div>
+				        <img src="./picture/github58.png"/>
+				    </a>
 
-					<a href="https://www.linkedin.com/in/joonyoung82/" target="_blank">
-						<img src="./picture/linkedin64.png" alt="LinkedIn" class="iconlinkedin"/>
-					</a>
-
-					<a href="https://github.com/joonyoung82" target="_blank">
-						<img src="./picture/github64.png" alt="GitHub" class="icongithub"/>
-					</a>
-  				</div>
   		
   	</div>
   </section>
 
   <footer>
-  	<p>Created by Joon Lee</p>
+  	<p>Created by Joon Lee, 2018</p>
   </footer>
 </body>
 </html>
