--- a/joon/index.html
+++ b/joon/index.html
@@ -19,14 +19,17 @@
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
 			<a href="http://www.htc.com/us/" target="_blank"><img class="worklogo col-sm-3" alt="HTC" src="./picture/HTC2.png" /></a>
-		 	<div class="col-sm-7 text-left">
-			  	<a href="http://www.htc.com/us/" target="_blank" class="companyname">HTC America</a>
+			<div class="col-sm-7 text-left">
+				<div>
+			  		<a href="http://www.htc.com/us/" target="_blank" class="companyname">HTC America</a>
+			  		<h3 class="location">Bedminster, NJ</h3>
+			  	</div>
 			  	<h4 class="duration">May 2011 - Feb 2018</h4>
 			  	<h5 class="title">Principal Software Quality Assurance Engineer</h5>
 			  	<h5 class="title">Senior Software Quality Assurance Engineer</h5>
 			  	<h5 class="title">Project Manager</h5>
 			  	<h5 class="title">Software Quality Assurance Engineer</h5>
-			  	<h3 class="location">Bedminster, NJ</h3>
+			  	
 			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
 			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
 			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
@@ -37,10 +40,14 @@
 			<div class="col-sm-1"></div>
 			<a href="http://www.lg.com/us/mobile" target="_blank"><img class="worklogo col-sm-3" alt="LG Electronics" src="./picture/LG2.png" /></a>
 			<div class="col-sm-7 text-left">
-			  	<a href="http://www.lg.com/us/mobile" target="_blank" class="companyname">LG Electronics MobileComm</a>
-			  	<h4 class="duration">Jan 2008 - May 2011</h4>
-			  	<h5 class="title">Software Verification Engineer</h5> 	
-			  	<h3 class="location">Morristown, NJ</h3>
+				<div>
+			  		<a href="http://www.lg.com/us/mobile" target="_blank" class="companyname">LG Electronics MobileComm</a>
+			  		<h3 class="location">Morristown, NJ</h3>
+			  	</div>
+			  	<div>
+			  		<h5 class="title">Software Verification Engineer</h5> 	
+			  		<h4 class="duration">Jan 2008 - May 2011</h4>
+			  	</div>
 		  		<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
 		  	</div>
 	  		<div class="col"></div>
@@ -49,7 +56,10 @@
 			<div class="col-sm-1"></div>
 		  	<a href="http://www.njit.edu/" target="_blank"><img class="worklogo col-sm-3" alt="NJIT" src="./picture/NJIT.png" /></a>
 		  	<div class="description col-sm-7">
-		  		<a href="http://www.njit.edu/" target="_blank" class="companyname">New Jersey Institue of Technology</a>
+		  		<div>
+		  			<a href="http://www.njit.edu/" target="_blank" class="companyname">New Jersey Institue of Technology</a>
+		  			<h3 class="location">Newark, NJ</h3>
+		  		</div>
 		  		<h4 class="duration">Graduated May, 2007</h4>
 		  		<h5 class="title">B.S. in Industrial Engineering</h5>
 		  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
