work exp alignment done

--- a/joon/index.html
+++ b/joon/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="shortcut icon" type="image/x-icon" href="./picture/titleicon.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="./picture/titleicon.png" />
 </head>
 <body>
   <div class="intro">
@@ -20,19 +20,17 @@
 			<div class="col-sm-1"></div>
 			<a href="http://www.htc.com/us/" target="_blank"><img class="worklogo col-sm-3" alt="HTC" src="./picture/HTC2.png" /></a>
 			<div class="col-sm-7 text-left">
-				<div>
-			  		<a href="http://www.htc.com/us/" target="_blank" class="companyname">HTC America</a>
+				<div class="row work">
+			  		<h3 class="companyname"><a href="http://www.htc.com/us/" target="_blank">HTC America</a></h3>
 			  		<h3 class="location">Bedminster, NJ</h3>
 			  	</div>
-			  	<h4 class="duration">May 2011 - Feb 2018</h4>
-			  	<h5 class="title">Principal Software Quality Assurance Engineer</h5>
-			  	<h5 class="title">Senior Software Quality Assurance Engineer</h5>
-			  	<h5 class="title">Project Manager</h5>
-			  	<h5 class="title">Software Quality Assurance Engineer</h5>
-			  	
-			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
-			  	<p>kjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	<div class="row work">
+				  	<h4 class="title">Principal Software Quality Assurance Engineer</h5>
+				  	<h4 class="duration">May 2011 - Feb 2018</h4>
+			  	</div>
+			  	<div class="row work">
+			  		<p>kjasdlfjlksdjakfjsld;jaljaskljajsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjksl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskljkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	</div>
 			</div>	  
 			<div class="col"></div>
 		</div>
@@ -40,29 +38,35 @@
 			<div class="col-sm-1"></div>
 			<a href="http://www.lg.com/us/mobile" target="_blank"><img class="worklogo col-sm-3" alt="LG Electronics" src="./picture/LG2.png" /></a>
 			<div class="col-sm-7 text-left">
-				<div>
-			  		<a href="http://www.lg.com/us/mobile" target="_blank" class="companyname">LG Electronics MobileComm</a>
+				<div class="row work">
+			  		<h3 class="companyname"><a href="http://www.lg.com/us/mobile" target="_blank">LG Electronics MobileComm</a></h3>
 			  		<h3 class="location">Morristown, NJ</h3>
 			  	</div>
-			  	<div>
-			  		<h5 class="title">Software Verification Engineer</h5> 	
+			  	<div class="row work">
+			  		<h4 class="title">Software Verification Engineer</h4> 	
 			  		<h4 class="duration">Jan 2008 - May 2011</h4>
 			  	</div>
-		  		<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  	<div class="row work">
+		  			<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjjhfhjkhjkhjkjkbjkbjkbkjbjkbjkbjkbfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+		  		</div>
 		  	</div>
 	  		<div class="col"></div>
 	  	</div>
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
 		  	<a href="http://www.njit.edu/" target="_blank"><img class="worklogo col-sm-3" alt="NJIT" src="./picture/NJIT.png" /></a>
-		  	<div class="description col-sm-7">
-		  		<div>
-		  			<a href="http://www.njit.edu/" target="_blank" class="companyname">New Jersey Institue of Technology</a>
+		  	<div class="col-sm-7 text-left">
+		  		<div class="row work">
+		  			<h3 class="companyname"><a href="http://www.njit.edu/" target="_blank">New Jersey Institue of Technology</a></h3>
 		  			<h3 class="location">Newark, NJ</h3>
 		  		</div>
-		  		<h4 class="duration">Graduated May, 2007</h4>
-		  		<h5 class="title">B.S. in Industrial Engineering</h5>
-		  		<p>blahblahblahblahblahblahblahblahkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+		  		<div class="row work">
+		  			<h4 class="title">B.S. in Industrial Engineering</h4>
+		  			<h4 class="duration">Graduated May, 2007</h4>
+		  		</div>
+		  		<div class="row work">
+		  			<p>blahblahblahblahblahblahbjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+		  		</div>
 		  	</div>
 	  		<div class="col"></div>
 	  	</div>
@@ -80,29 +84,25 @@
   </div>
   <section class="jumbotron">
   	<div class="contact">
-  			<h1 id="heading">Contact Me</h1>
-
-				    <a class="img" href="mailto:joonyoung82@gmail.com?Subject=Hello%20Joon" target="_top">
-				        <div class="img__overlay_email">email</div>
-				        <img src="./picture/email58.png"/>
-				    </a>
-				    <a class="img" href="./picture/Resume.doc" download>
-				        <div class="img__overlay_resume">Resume</div>
-				        <img src="./picture/resume58.png"/>
-				    </a>
-				    <a class="img" href="https://www.linkedin.com/in/joonyoung82/" target="_blank">
-				        <div class="img__overlay_linkedin">LinkedIn</div>
-				        <img src="./picture/linkedin58.png"/>
-				    </a>
-				    <a class="img" href="https://github.com/joonyoung82" target="_blank">
-				        <div class="img__overlay_github">GitHub</div>
-				        <img src="./picture/github58.png"/>
-				    </a>
-
-  		
+  		<h1 id="heading">Contact Me</h1>
+		    <a class="img" href="mailto:joonyoung82@gmail.com?Subject=Hello%20Joon" target="_top">
+		        <div class="img__overlay_email">email</div>
+		        <img src="./picture/email58.png"/>
+		    </a>
+		    <a class="img" href="./picture/Resume.pdf" download>
+		        <div class="img__overlay_resume">Resume</div>
+		        <img src="./picture/resume58.png"/>
+		    </a>
+		    <a class="img" href="https://www.linkedin.com/in/joonyoung82/" target="_blank">
+		        <div class="img__overlay_linkedin">LinkedIn</div>
+		        <img src="./picture/linkedin58.png"/>
+		    </a>
+		    <a class="img" href="https://github.com/joonyoung82" target="_blank">
+		        <div class="img__overlay_github">GitHub</div>
+		        <img src="./picture/github58.png"/>
+		    </a>
   	</div>
   </section>
-
   <footer>
   	<p>Created by Joon Lee, 2018</p>
   </footer>
