rounded corner and background color gradient

--- a/joon/index.html
+++ b/joon/index.html
@@ -18,26 +18,31 @@
 	  <div class="container career">
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
-			<a href="http://www.htc.com/us/" target="_blank"><img class="worklogo col-sm-3" alt="HTC" src="./picture/HTC2.png" /></a>
-			<div class="col-sm-7 text-left">
+			<a href="http://www.htc.com/us/" target="_blank"><img class="worklogo col-sm-2" alt="HTC" src="./picture/HTC256.jpg" /></a>
+			<div class="col-sm-7 text-left workdescription">
 				<div class="row work">
 			  		<h3 class="companyname"><a href="http://www.htc.com/us/" target="_blank">HTC America</a></h3>
 			  		<h3 class="location">Bedminster, NJ</h3>
 			  	</div>
 			  	<div class="row work">
-				  	<h4 class="title">Principal Software Quality Assurance Engineer</h5>
+				  	<h4 class="title">Principal Software Quality Assurance Engineer</h4>
 				  	<h4 class="duration">May 2011 - Feb 2018</h4>
 			  	</div>
 			  	<div class="row work">
-			  		<p>kjasdlfjlksdjakfjsld;jaljaskljajsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjksl;jlsajfskasdfsadfsadfsadfasdfdfasdfsafddfasdfasfl;adjsfkl;jskl;ajsl;kfjsdkl;afjskljkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  		<ul>
+			  			<li>Managed development and execution of software test plans to identify software problems and their causes</li>
+			  			<li>Performed black-box tests, system software tests, and radio stability tests on all pre-launched mobile phones to ensure software and hardware quality and functionality on all devices released to Verizon and Sprint carriers</li>
+			  			<li>Ensured software quality throughout the life cycle of the device from pre-launch, regression, maintenance release, and OS update via FOTA</li>
+			  			<li>Led Software QA efforts in collaboration project with Google to build Pixel & Pixel 2</li>
+			  		</ul>
 			  	</div>
 			</div>	  
 			<div class="col"></div>
 		</div>
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
-			<a href="http://www.lg.com/us/mobile" target="_blank"><img class="worklogo col-sm-3" alt="LG Electronics" src="./picture/LG2.png" /></a>
-			<div class="col-sm-7 text-left">
+			<a href="http://www.lg.com/us/mobile" target="_blank"><img class="worklogo col-sm-2" alt="LG Electronics" src="./picture/LG256.jpg" /></a>
+			<div class="col-sm-7 text-left workdescription">
 				<div class="row work">
 			  		<h3 class="companyname"><a href="http://www.lg.com/us/mobile" target="_blank">LG Electronics MobileComm</a></h3>
 			  		<h3 class="location">Morristown, NJ</h3>
@@ -47,15 +52,21 @@
 			  		<h4 class="duration">Jan 2008 - May 2011</h4>
 			  	</div>
 			  	<div class="row work">
-		  			<p>descriptionkjasdlfjlksdjakfjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjjhfhjkhjkhjkjkbjkbjkbkjbjkbjkbjkbfskl;adjsfkl;jskl;ajsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+			  		<ul>
+			  			<li>Developed and executed software test plans in order to identify software problems and their causes</li>
+			  			<li>Performed gray-box and black-box software testing on all pre-launched mobile phones</li>
+			  			<li>Analyzed carrier requirements and developed test plans, test scenarios, and test cases</li>
+			  			<li>Reported and tracked bugs, replicated reported bugs, verified bug fixes and new functionalities, regression test new SW releases, support R&D by submitting logs</li>
+			  			<li>Managed software quality on Android, Windows OS, BREW OS, BT headsets, etc.</li>
+		  			</ul>
 		  		</div>
 		  	</div>
 	  		<div class="col"></div>
 	  	</div>
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
-		  	<a href="http://www.njit.edu/" target="_blank"><img class="worklogo col-sm-3" alt="NJIT" src="./picture/NJIT.png" /></a>
-		  	<div class="col-sm-7 text-left">
+		  	<a href="http://www.njit.edu/" target="_blank"><img class="worklogo col-sm-2" alt="NJIT" src="./picture/NJIT256.png" /></a>
+		  	<div class="col-sm-7 text-left workdescription">
 		  		<div class="row work">
 		  			<h3 class="companyname"><a href="http://www.njit.edu/" target="_blank">New Jersey Institue of Technology</a></h3>
 		  			<h3 class="location">Newark, NJ</h3>
@@ -65,7 +76,9 @@
 		  			<h4 class="duration">Graduated May, 2007</h4>
 		  		</div>
 		  		<div class="row work">
-		  			<p>blahblahblahblahblahblahbjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jaljaskljasl;jlsajjhfhjkhjkhjkjkjsld;jsl;kfjsdkl;afjskl;adjfl;ksajdfkl;jfl;skajkl;sajkl;sajkl;sdafjkls;adjfkl;sajs</p>
+		  			<ul>
+		  				<li></li>
+		  			</ul>
 		  		</div>
 		  	</div>
 	  		<div class="col"></div>
@@ -82,7 +95,7 @@
   		<img src="./picture/git128.png" alt="git" class="dicon"/>
   	</div>
   </div>
-  <section class="jumbotron">
+  <section class="jumbotron contactme">
   	<div class="contact">
   		<h1 id="heading">Contact Me</h1>
 		    <a class="img" href="mailto:joonyoung82@gmail.com?Subject=Hello%20Joon" target="_top">
