--- a/joon/index.html
+++ b/joon/index.html
@@ -9,10 +9,11 @@
   <link rel="shortcut icon" type="image/x-icon" href="./picture/titleicon.png" />
 </head>
 <body>
-  <div class="intro">
+  <div class="intro" id="intro">
     <h3>Hi, I'm</h3>
     <h1>- Joon Lee -</h1>
-  </div>
+    <p>Software QA Engineer with extensive experience and programming chops</p>
+  </div>  
   <section class="jumbotron">
 	  <h1 id="heading">Where I've Been</h1>
 	  <div class="container career">
