--- a/joon/index.html
+++ b/joon/index.html
@@ -15,7 +15,7 @@
     <p>Software QA Engineer with extensive experience and programming chops</p>
   </div>  
   <section class="jumbotron">
-	  <h1 id="heading">Where I've Been</h1>
+	  <h1 id="heading">Work Experience</h1>
 	  <div class="container career">
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
@@ -61,14 +61,17 @@
 			  			<li>Managed software quality on Android, Windows OS, BREW OS, BT headsets, etc.</li>
 		  			</ul>
 		  		</div>
+		  		<div class="workEnd">
+		  		</div>
 		  	</div>
 	  		<div class="col"></div>
 	  	</div>
+	  <h1 id="heading">Education</h1>
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
-		  	<a href="http://www.njit.edu/" target="_blank"><img class="worklogo col-sm-2" alt="NJIT" src="./picture/NJIT256.png" /></a>
+		  	<a href="http://www.njit.edu/" target="_blank"><img id="njitlogo" class="worklogo col-sm-2" alt="NJIT" src="./picture/NJIT256.png" /></a>
 		  	<div class="col-sm-7 text-left workdescription">
-		  		<div class="row work">
+		  		<div class="row work" id="NJIT">
 		  			<h3 class="companyname"><a href="http://www.njit.edu/" target="_blank">New Jersey Institue of Technology</a></h3>
 		  			<h3 class="location">Newark, NJ</h3>
 		  		</div>
@@ -78,7 +81,9 @@
 		  		</div>
 		  		<div class="row work">
 		  			<ul>
-		  				<li></li>
+		  				<li>Developed knowledge of mathematics, science and engineering</li>
+		  				<li>Obtained the ability to design and conduct experiments, as well as to analyze and interpret data</li>
+		  				<li>Learned the broad education necessary to understand the impact of engineering solutions in a global, econimic, environmental and societal context</li>
 		  			</ul>
 		  		</div>
 		  	</div>
