img title and gray scale on dev tools

--- a/joon/index.html
+++ b/joon/index.html
@@ -66,7 +66,7 @@
 		  	</div>
 	  		<div class="col"></div>
 	  	</div>
-	  <h1 id="heading">Education</h1>
+	  <h1 id="heading" class="education">Education</h1>
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
 		  	<a href="http://www.njit.edu/" target="_blank"><img id="njitlogo" class="worklogo col-sm-2" alt="NJIT" src="./picture/NJIT256.png" /></a>
@@ -92,13 +92,13 @@
 	  </div>
   </section>
   <div class="skills">
-  	<h1 id="heading">What I Can Do</h1>
+  	<h1 id="heading">Development Capabilities</h1>
   	<div class="development">
-  		<img src="./picture/python128.png" alt="python" class="dicon"/>
-  		<img src="./picture/js128.png" alt="javascript" class="dicon"/>
-  		<img src="./picture/html128.png" alt="html" class="dicon"/>
-  		<img src="./picture/css128.png" alt="css" class="dicon"/>
-  		<img src="./picture/git128.png" alt="git" class="dicon"/>
+  		<img src="./picture/python128.png" alt="python" class="dicon" title="python"/>
+  		<img src="./picture/js128.png" alt="javascript" class="dicon" title="JavaScript"/>
+  		<img src="./picture/html128.png" alt="html" class="dicon" title="HTML5"/>
+  		<img src="./picture/css128.png" alt="css" class="dicon" title="CSS3"/>
+  		<img src="./picture/git128.png" alt="git" class="dicon" title="git"/>
   	</div>
   </div>
   <section class="jumbotron contactme">
@@ -123,7 +123,7 @@
   	</div>
   </section>
   <footer>
-  	<p>Created by Joon Lee, 2018</p>
+  	<p>© Joon Lee, 2018</p>
   </footer>
 </body>
 </html>
