--- a/joon/index.html
+++ b/joon/index.html
@@ -30,12 +30,7 @@
 				  	<h4 class="duration">May 2011 - Feb 2018</h4>
 			  	</div>
 			  	<div class="row work">
-			  		<ul>
-			  			<li>Managed development and execution of software test plans to identify software problems and their causes</li>
-			  			<li>Performed black-box tests, system software tests, and radio stability tests on all pre-launched mobile phones to ensure software and hardware quality and functionality on all devices released to Verizon and Sprint carriers</li>
-			  			<li>Ensured software quality throughout the life cycle of the device from pre-launch, regression, maintenance release, and OS update via FOTA</li>
-			  			<li>Led Software QA efforts in collaboration project with Google to build Pixel & Pixel 2</li>
-			  		</ul>
+					<p id="workP">My team worked on assuring software quality on all smartphones released to Verizon and Sprint successfully releasing over 25 smartphones in 7 years with more than 25 million units sold. Key achievements include leading software quality assurance team on releasing HTC One M7 and M8 both of which were awarded “Smartphone of the year” at the Mobile World Congress in 2013 and 2014.</p>
 			  	</div>
 			</div>	  
 			<div class="col"></div>
@@ -53,13 +48,7 @@
 			  		<h4 class="duration">Jan 2008 - May 2011</h4>
 			  	</div>
 			  	<div class="row work">
-			  		<ul>
-			  			<li>Developed and executed software test plans in order to identify software problems and their causes</li>
-			  			<li>Performed gray-box and black-box software testing on all pre-launched mobile phones</li>
-			  			<li>Analyzed carrier requirements and developed test plans, test scenarios, and test cases</li>
-			  			<li>Reported and tracked bugs, replicated reported bugs, verified bug fixes and new functionalities, regression test new SW releases, support R&D by submitting logs</li>
-			  			<li>Managed software quality on Android, Windows OS, BREW OS, BT headsets, etc.</li>
-		  			</ul>
+					<p id="workP">Developed and executed software test plans in order to identify software problems and their causes.  Reported and tracked bugs, replicated reported bugs, verified bug fixes and new functionalities, regression test new SW releases, support R&D by submitting appropriate logs. Led my team in number of bugs found through black-box testing and carrier requirement testing across different OS; Android, Windows and BREW. </p>
 		  		</div>
 		  		<div class="workEnd">
 		  		</div>
@@ -80,12 +69,7 @@
 		  			<h4 class="duration">Graduated May, 2007</h4>
 		  		</div>
 		  		<div class="row work">
-		  			<ul>
-		  				<li>Developed knowledge of mathematics, science and engineering</li>
-		  				<li>Obtained the ability to design and conduct experiments, as well as to analyze and interpret data</li>
-		  				<li>Learned the broad education necessary to understand the impact of engineering solutions in a global, econimic, environmental and societal context</li>
-		  			</ul>
-		  		</div>
+		  			<p id="workP">NJIT presented opportunities to develop knowledge of mathematics, science and engineering.  Years of phenomenal professors taught me the broad education necessary to understand the impact of engineering solutions in a global, economic, environmental and societal context.  My experience serving as student president in KCCC across 10 campuses in NY metropolitan area strengthened my leadership skills, and expanded my comfort zone.</p>
 		  	</div>
 	  		<div class="col"></div>
 	  	</div>
