--- a/joon/index.html
+++ b/joon/index.html
@@ -85,6 +85,58 @@
   		<img src="./picture/git128.png" alt="git" class="dicon" title="git"/>
   	</div>
   </div>
+  <div class="volunteer">
+  	<h1 id="heading">Volunteer</h1>
+  	<div class="volunteerWork">
+		<img src="./picture/volunteer/mangohouse128blank.png" alt="Mango House" class="vicon" title="Mango House" id="myBtnMH">
+		<!-- The Modal -->
+		<div id="myModalMH" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <span class="closeMH">&times;</span>
+		    <a href="http://www.elijahfoundation.org/whatwedo/mangos.html" target="_blank"><img src="./picture/volunteer/mangolong1600.jpg" class="img-responsive"></a>
+		    <p class="modal-p">Mango House is a children's home in urban area of Chiangmai, Thailand dedicated to sending quality students to the best schools possible. The vision for Mango House is two fold: Education and Discipleship.  </p>
+		    <a href="http://www.borgenmagazine.com/mango-house-chiang-mai/" target="_blank">Mango House, a Beacon of Hope in Chiang Mai</a>
+		  </div>
+		</div>
+
+
+
+		<img src="./picture/volunteer/livingfields128.png" alt="Living Fields" class="vicon" title="Living Fields" id="myBtnLF">
+		<!-- The Modal -->
+		<div id="myModalLF" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <span class="closeLF">&times;</span>
+		    <a href="http://www.livingfields.org/#/home" target="_blank"><img src="./picture/volunteer/mainLivingfields1600.jpg" class="img-responsive"></a>
+		    <p class="modal-p">Living Fields is a church planted in Lynn, MA., which focuses on spreading hope and the good news to Cambodian killing fields refugees. I led 3 mission teams to help with construction of their dormitory which is used to house disciples</p>
+		  </div>
+		</div>
+
+
+		<img src="./picture/volunteer/kccc128.png" alt="KCCC" class="vicon" title="KCCC" id="myBtnK">
+		<!-- The Modal -->
+		<div id="myModalK" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <span class="closeK">&times;</span>
+		    <a href="https://www.cru.org/us/en/communities/campus/about-korea-ccc-in-america.html" target="_blank"><img src="./picture/volunteer/kccc1600.png" class="img-responsive"></a>
+		    <p class="modal-p">KCCC. served as student president in 2007 and sponsoring xxx staffs</p>
+		  </div>
+		</div>
+
+		<img src="./picture/volunteer/compassion128.jpg" alt="Compassion" class="vicon" title="Compassion" id="myBtnC">
+		<!-- The Modal -->
+		<div id="myModalC" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <span class="closeC">&times;</span>
+		    <a href="https://www.compassion.com/" target="_blank"><img src="./picture/volunteer/compassion1600.jpg" class="img-responsive"></a>
+		    <p class="modal-p">Currently sponsoring 6 kids through compassion all over the world</p>
+		  </div>
+		</div>
+  	</div>
+  </div>
   <section class="jumbotron contactme">
   	<div class="contact">
   		<h1 id="heading">Contact Me</h1>
@@ -109,5 +161,6 @@
   <footer>
   	<p>© Joon Lee, 2018</p>
   </footer>
+<script src='main.js'></script> 
 </body>
 </html>
