--- a/joon/index.html
+++ b/joon/index.html
@@ -95,7 +95,9 @@
 		  <div class="modal-content">
 		    <span class="closeMH">&times;</span>
 		    <a href="http://www.elijahfoundation.org/whatwedo/mangos.html" target="_blank"><img src="./picture/volunteer/mangolong1600.jpg" class="img-responsive"></a>
-		    <p class="modal-p">Mango House is a children's home in urban area of Chiangmai, Thailand dedicated to sending quality students to the best schools possible. The vision for Mango House is two fold: Education and Discipleship.  </p>
+		    <h5>Mango House</h5>
+		    <p class="modal-p">Mango House is a children's home in Thailand dedicated to serving orphans and kids from broken families by providing food, housing, education, and hope through the gospel. Their mission is to send quality students to the best schools possible. The vision for Mango House is two fold: Education and Discipleship.  </p>
+		    <p class="modal-p">I visited Mango House in 2017 to host VBS, teach English and Math, and to love the children.  I also helped send 2018 mission team with finance, prayer, and planning.</p>
 		    <a href="http://www.borgenmagazine.com/mango-house-chiang-mai/" target="_blank">Mango House, a Beacon of Hope in Chiang Mai</a>
 		  </div>
 		</div>
@@ -109,7 +111,9 @@
 		  <div class="modal-content">
 		    <span class="closeLF">&times;</span>
 		    <a href="http://www.livingfields.org/#/home" target="_blank"><img src="./picture/volunteer/mainLivingfields1600.jpg" class="img-responsive"></a>
-		    <p class="modal-p">Living Fields is a church planted in Lynn, MA., which focuses on spreading hope and the good news to Cambodian killing fields refugees. I led 3 mission teams to help with construction of their dormitory which is used to house disciples</p>
+		    <h5>Living Fields</h5>
+		    <p class="modal-p">Living Fields is a church planted in Lynn, MA., which focuses on spreading hope and the good news to Cambodian killing fields refugees. Many Cambodians suffer PTSD from the Khmer Rouge genocide in the 70's. Living Fields was started in 2004 by Pastor PoSan Ung who recognized the deep brokenness of his fellow Cambodian people and received the call from God to minister to this unreached community who continues to hang tightly to the hope of a better life.</p>
+		    <p class="modal-p">I served as team leader for three mission teams to Living Fields to host VBS for the kids and to help with construction of their dormitory which is used to house disciples.  We also participated in water festival which is the largest Southeast Asian festival in East Coast to raise awareness and to spread the gospel.</p>
 		  </div>
 		</div>
 
@@ -120,8 +124,9 @@
 		  <!-- Modal content -->
 		  <div class="modal-content">
 		    <span class="closeK">&times;</span>
-		    <a href="https://www.cru.org/us/en/communities/campus/about-korea-ccc-in-america.html" target="_blank"><img src="./picture/volunteer/kccc1600.png" class="img-responsive"></a>
-		    <p class="modal-p">KCCC. served as student president in 2007 and sponsoring xxx staffs</p>
+		    <a href="https://www.gcx.org/kcccusa/" target="_blank"><img src="./picture/volunteer/kccc1600.png" class="img-responsive"></a>
+		    <p class="modal-p">KCCC is a Cru movement</p>
+		    <p class="modal-p">I served as student president in 2007 and currently am sponsoring 6 full time staffs</p>
 		  </div>
 		</div>
 
