--- a/joon/index.html
+++ b/joon/index.html
@@ -88,13 +88,13 @@
   <div class="volunteer">
   	<h1 id="heading">Volunteer</h1>
   	<div class="volunteerWork">
-		<img src="./picture/volunteer/mangohouse128blank.png" alt="Mango House" class="vicon" title="Mango House" id="myBtnMH">
+		<img src="./picture/mangohouse128blank.png" alt="Mango House" class="vicon" title="Mango House" id="myBtnMH">
 		<!-- The Modal -->
 		<div id="myModalMH" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 		    <span class="closeMH">&times;</span>
-		    <a href="http://www.elijahfoundation.org/whatwedo/mangos.html" target="_blank"><img src="./picture/volunteer/mangolong1600.jpg" class="img-responsive"></a>
+		    <a href="http://www.elijahfoundation.org/whatwedo/mangos.html" target="_blank"><img src="./picture/mangolong1600.jpg" class="img-responsive"></a>
 		    <h5>Mango House</h5>
 		    <p class="modal-p">Mango House is a children's home in Thailand dedicated to serving orphans and kids from broken families by providing food, housing, education, and hope through the gospel. Their mission is to send quality students to the best schools possible. The vision for Mango House is two fold: Education and Discipleship.  </p>
 		    <p class="modal-p">I visited Mango House in 2017 to host VBS, teach English and Math, and to love the children.  I also helped send 2018 mission team with finance, prayer, and planning.</p>
@@ -104,13 +104,13 @@
 
 
 
-		<img src="./picture/volunteer/livingfields128.png" alt="Living Fields" class="vicon" title="Living Fields" id="myBtnLF">
+		<img src="./picture/livingfields128.png" alt="Living Fields" class="vicon" title="Living Fields" id="myBtnLF">
 		<!-- The Modal -->
 		<div id="myModalLF" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 		    <span class="closeLF">&times;</span>
-		    <a href="http://www.livingfields.org/#/home" target="_blank"><img src="./picture/volunteer/mainLivingfields1600.jpg" class="img-responsive"></a>
+		    <a href="http://www.livingfields.org/#/home" target="_blank"><img src="./picture/mainLivingfields1600.jpg" class="img-responsive"></a>
 		    <h5>Living Fields</h5>
 		    <p class="modal-p">Living Fields is a church planted in Lynn, MA., which focuses on spreading hope and the good news to Cambodian killing fields refugees. Many Cambodians suffer PTSD from the Khmer Rouge genocide in the 70's. Living Fields was started in 2004 by Pastor PoSan Ung who recognized the deep brokenness of his fellow Cambodian people and received the call from God to minister to this unreached community who continues to hang tightly to the hope of a better life.</p>
 		    <p class="modal-p">I served as team leader for three mission teams to Living Fields to host VBS for the kids and to help with construction of their dormitory which is used to house disciples.  We also participated in water festival which is the largest Southeast Asian festival in East Coast to raise awareness and to spread the gospel.</p>
@@ -118,25 +118,25 @@
 		</div>
 
 
-		<img src="./picture/volunteer/kccc128.png" alt="KCCC" class="vicon" title="KCCC" id="myBtnK">
+		<img src="./picture/kccc128.png" alt="KCCC" class="vicon" title="KCCC" id="myBtnK">
 		<!-- The Modal -->
 		<div id="myModalK" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 		    <span class="closeK">&times;</span>
-		    <a href="https://www.gcx.org/kcccusa/" target="_blank"><img src="./picture/volunteer/kccc1600.png" class="img-responsive"></a>
+		    <a href="https://www.gcx.org/kcccusa/" target="_blank"><img src="./picture/kccc1600.png" class="img-responsive"></a>
 		    <p class="modal-p">KCCC is a Cru movement</p>
 		    <p class="modal-p">I served as student president in 2007 and currently am sponsoring 6 full time staffs</p>
 		  </div>
 		</div>
 
-		<img src="./picture/volunteer/compassion128.jpg" alt="Compassion" class="vicon" title="Compassion" id="myBtnC">
+		<img src="./picture/compassion128.jpg" alt="Compassion" class="vicon" title="Compassion" id="myBtnC">
 		<!-- The Modal -->
 		<div id="myModalC" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 		    <span class="closeC">&times;</span>
-		    <a href="https://www.compassion.com/" target="_blank"><img src="./picture/volunteer/compassion1600.jpg" class="img-responsive"></a>
+		    <a href="https://www.compassion.com/" target="_blank"><img src="./picture/compassion1600.jpg" class="img-responsive"></a>
 		    <p class="modal-p">Currently sponsoring 6 kids through compassion all over the world</p>
 		  </div>
 		</div>
