screen size control

--- a/joon/index.html
+++ b/joon/index.html
@@ -23,7 +23,7 @@
 			<div class="col-sm-7 text-left workdescription">
 				<div class="row work">
 			  		<h3 class="companyname"><a href="http://www.htc.com/us/" target="_blank">HTC America</a></h3>
-			  		<h3 class="location">Bedminster, NJ</h3>
+			  		<h3 class="location htclocation">Bedminster, NJ</h3>
 			  	</div>
 			  	<div class="row work">
 				  	<h4 class="title">Principal Software Quality Assurance Engineer</h4>
